--- a/ispy/index.html
+++ b/ispy/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
-      http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <title>Hello from Electron renderer!</title>
-  </head>
-  <body>
-    <h1>Hello from Electron renderer!</h1>
-    <p>👋</p>
-    <p id="info"></p>
-  </body>
-  <script src="./renderer.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Audio Recorder</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <div id="app">
+        <button id="startBtn">Start Recording</button>
+        <button id="stopBtn" disabled>Stop Recording</button>
+        <button id="downloadBtn" hidden>Download Clip</button>
+        <p>Status: <span id="status">Idle</span></p>
+        <audio id="audioPlayback" controls hidden></audio>
+        <div id="transcript" hidden></div>
+    </div>
+    <script src="renderer.js"></script>
+</body>
 </html>
